Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.9.1
-
Fix Version/s: Qt Creator 4.9.2, Qt Creator 4.10.0-beta2
-
Component/s: Widget Designer
-
Labels:None
-
Platform/s:
-
Commits:7d46060af011737caa2f673d601898abcd3a4e48 (qt-creator/qt-creator/4.10)
Description
There is a bug that does not allow me to close an opened ui file in Design Mode when i open a project and open that ui file for the first time. The close button is disabled. I can only use that close button when i switch to edit mode and switch back to design mode.